[package]
name = "hptp"
version = "0.0.11"
edition = "2021"
authors = ["Vrtgs"]
license = "MIT OR Apache-2.0"
description = "the high performance TCP proxy written in rust"
repository = "https://github.com/Vrtgs/hptp/tree/master"
documentation = "https://github.com/Vrtgs/hptp/blob/master/README.md"
readme = "README.md"

[profile.release]
    opt-level = 3
    strip = true
    lto = "fat"
    panic = "abort"
    codegen-units = 1
    incremental = false

[profile.dev]
    opt-level = 0
    incremental = true
    debug = true
    panic = "unwind"
    strip = false
    lto = "off"

[features]
default = ["cli"]
cli = ["dep:clap"]


[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
arrayvec = "0.7.6"
futures = "0.3.30"
rand = "0.9.0-alpha.2"
clap = { version = "4.5.15", features = ["derive"], optional = true }
strum = { version = "0.26.3", features = ["derive"] }
smallvec = { version = "2.0.0-alpha.7", features = ["std"] }
itertools = "0.13.0"
hickory-resolver = "0.25.0-alpha.2"
thiserror = "1.0.63"
cfg-if = "1.0.0"
url = "2.5.2"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-splice = "0.2.1"