[package]
name = "hptp"
version = "0.1.2"
edition = "2021"
authors = ["Vrtgs"]
license = "MIT OR Apache-2.0"
description = "the high performance TCP proxy written in rust"
repository = "https://github.com/Vrtgs/hptp/tree/master"
documentation = "https://github.com/Vrtgs/hptp/blob/master/README.md"
readme = "README.md"

[profile.release]
    opt-level = 3
    strip = true
    lto = "fat"
    panic = "abort"
    codegen-units = 1
    incremental = false

[profile.dev]
    opt-level = 0
    incremental = true
    debug = true
    panic = "unwind"
    strip = false
    lto = "off"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:nix", "dep:paste"]


[dependencies]
monoio = { version = "0.2.4", features = ["splice", "zero-copy", "sync"] }
tokio = { version = "1.43.0", features = ["net", "time", "rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
futures = "0.3.31"
clap = { version = "4.5.28", features = ["derive"], optional = true }
strum = { version = "0.27.1", features = ["derive"] }
smallvec = { version = "2.0.0-alpha.10", features = ["std"] }
itertools = "0.14.0"
hickory-resolver = "0.25.0-alpha.4"
thiserror = "2.0.11"
cfg-if = "1.0.0"
flume = "0.11.1"

# cli
paste = { version = "1.0.15", optional = true }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
sysinfo = "0.33.1"

[target.'cfg(windows)'.dependencies.windows]
version = "0.59.0"
features = [
    "Win32",
    "Win32_Security",
    "Win32_System",
    "Win32_System_Threading",
    "Win32_UI",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com"
]

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
nix = { version = "0.29.0", features = ["user"], optional = true }